# SurfaceEmbedder

./: .gitignore  Makefile.am  OGDF  README  configure.ac
cascades/: Makefile  base-1.in  base-2.in  base-3.in  base.in  cascades-1.in  cascades-2.in  cascades.cpp  cascades.in  embedder
data/: cascades-basis.in  cascades.g6  cascades.in  cascades.out  cgp.out  graphs-10.in  graphs-10.raw  graphs-12.in  graphs-12.raw  graphs-14.in  graphs-14.raw  graphs-16.in  graphs-16.raw  graphs-18.in  graphs-18.raw  graphs-20.raw  graphs-24.raw  graphs-6.raw  graphs-8.raw  graphs-g5-18.raw  graphs-g5-20.raw  graphs-g5-22.raw  klein-18.out  klein-1con.in  klein-20.out  klein-2con.g6  klein-cascades.g6  klein-cubic-14.out  klein-cubic-18.out  klein-cubic-20.out  klein-pp-2con.g6  klein-pp-plus.in  klein-pp.g6  p2obstr.txt  pp-plus-in-klein.out  proj-cubic.out  projplane.in  projplanesub.g6  projplanesub.in  tml-pp-egp-2con.2.tg6  (+30 more)
embedder/: Makefile  embedder.cpp  embedder.h
factory/: Makefile  base-1-edge-2-8.in  base-2-edge-0-7.in  base-3-edge-0-8.in  base-4-edge-0-9.in  base-5-edge-0-9.in  cascades.1.out  cascades.2.out  cascades.2.tg6  cascades.3.out  cascades.3.tg6  factory.cpp  mbases.in  precascades.1.out  precascades.1.tg6  precascades.2.out  precascades.2.tg6  sbases.in
genstats/: Makefile  genstats.cpp
klein/: Makefile  Makefile.profiles  genus-graphs-10.out  genus-graphs-12.out  genus-graphs-14.out  genus-graphs-16.out  genus.cpp  graphs-16.out  graphs-18.out  graphs-20.out  graphs-dist-22.out  graphs-genus-18-2.out  graphs-genus-18.out  klein-cubic-16.out  klein-cubic-20.out  klein-cubic-22.out  ogdfbase  old-graphs-16.out  old-graphs-18.out  test-klein.cpp
mintester/: Makefile  graphs-10.in  graphs-12.in  graphs-14.in  graphs-16.in  graphs-18.in  mintester.cpp  orient.in
ogdfbase/: Makefile  Makefile.profiles  interval_tree.cpp  ogdfbase.cpp  ogdfbase.h
projective/: Makefile  embedder-proj.cpp  graphs-10.out  graphs-12.out  graphs-14.in  k34-based-1.in  ogdfprojective.cpp  petersen.in  reconstruct.cpp  test-1.in  test-proj.cpp  v8based-2.in  v8based-3.in  v8based-4.in  v8based-5.in  v8based-6.in  v8based.in
scripts/: addkuratowski.py  canonical  check_tml.py  convert.sed  display.py  dot2pdf  edge_orbit.py  g62tml  g6can  gconvert  genusplus.py  gplus-simp.sh  gplus.sh  iso  kur2sum.py  layout.sh  mp-layout.sh  relabel.py  terminal.py  text2graph6  text2tml  tml2dot  tml2text  tmlcan  tmliso  tmlkur.py  tmltest.py
sieve/: Makefile  graphs-16.in  sieve.cpp
torus/: Makefile  embobs.cpp  gen.sh  graphs-12.in  graphs-18.in  graphs-20.in  graphs-20.out  graphs-22.out  k4.in  k6.in  kubicni  kubicni.pas  min-graphs-18.out  min-graphs-20.out  min-graphs-22.out  min-graphs-24.out  nauty  ogdf-dist.sh  ogdftorus.cpp  old-kubicni.pas  old-ogdfbase.cpp  old-runtorus-opt  (+13 more)
(+11 files in other folders)
